--- a/assents/css/style.css
+++ b/assents/css/style.css
@@ -3,7 +3,7 @@
 *{
 margin:0;
 padding:0%;
-/*box-sizing: border-box;*/
+box-sizing: border-box;
 font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
 }
@@ -12,12 +12,12 @@ body{
     margin: 0%;
     padding: 50px;
     border:30px;
-    color:#5c91b4 ;
+    color: #930f14;
 
 }
 
 header{
-    background-color:#624c2c ;
+    background-color:#930f14;
     height:190px;
 
 }
@@ -32,11 +32,12 @@ h1{
     font-style: normal;
 }
 nav{
-    background-color:#a58c78 ;
+    background-color:#790b11 ;
     height: 30px;
+    padding:7px;
 }
 h2{
-    color: rgba(245, 245, 220, 0.518);
+    color:#986b66;
     font-size:55px;
     font-family: "Playfair Display", serif;
     font-optical-sizing: auto;
@@ -46,28 +47,32 @@ h2{
 
 }
 
-h3{
-    color: #5c91b4;
+main{
+    background-color:#930f14;
+    height: auto;
+   
+}
+img{
+    width:auto;
+    height: 600px;
+    .center
+    {
+        display: flex;
+        display: -webkit-flex;
+        justify-content: center;
+        align-items: center;
+    }
+  }
+  p{
+    color: #986b66;
     font-size: 23px;
-    font-family: "Fascinate Inline", system-ui;
+    font-family:"Playfair Display", serif;
     font-weight: 400;
     font-style: normal;
 }
-main{
-    background-color: burlywood;
-    height: auto;
-}
 
-p{
-    color: #5c91b4;
-    font-size: 23px;
-        font-family: "Fascinate Inline", system-ui;
-        font-weight: 400;
-        font-style: normal;
-      
-}
  a{
-    color: blanchedalmond;
+    color:#790b11;
     text-decoration: none;
  }
  a:hover{
@@ -75,16 +80,23 @@ p{
     text-decoration: none;
  }
  footer{
-    background-color: #624c2c;
-    height: 140px;
-    color: #5c91b4;
-        font-family: "Protest Guerrilla", sans-serif;
-        font-size: 500;
-        font-style: italic;
+    background-color:#a58c78;
+    height:30px;
+    color: beige;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-style: normal;
       }
-      img{
-        width:auto;
-        height: 600px;
-      }
-      
+
+ .container1 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+ }   
+
+ .container2 {
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+ }
 
