--- a/Portfolio-André Emílio/assets/css/style4.css
+++ b/Portfolio-André Emílio/assets/css/style4.css
@@ -1,128 +1,325 @@
 @charset "utf-8";
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  html {
-    height: 100vh;
-  }
-  
-  body {
+
+*{
+margin:0;
+padding:0%;
+box-sizing: border-box;
+font-family:Arial, Helvetica, sans-serif Bold;
+
+}
+html{
+    height:100vh;
+}
+
+body{
+
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    background-image: linear-gradient(to bottom, #930f14, #730);
-    background-repeat: no-repeat;
+    background-image:linear-gradient(to bottom, #930f14 , #730);
+    background-repeat:no-repeat;
     background-position: top;
     background-attachment: scroll;
-  }
-  
-  a {
-    color: #b00f17;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    color: rgb(6, 106, 73);
-    text-decoration: none;
-  }
+}
 
-  header {
-    background-color: #930f14;
-    margin-top: 17px;
+header{
+    background-color:#930f14;
+    margin-top:17px;
     border-radius: 6px 6px 5px 5px;
-    height: 190px;
-    text-align: center;
-  }
-  
-  header > h1 {
-    text-align: center;
+    height:190px;
+    /* width:90px;
+    */
+
+}
+header>h1{
+ text-align: center;
     color: aliceblue;
     padding: 6px;
     text-shadow: #e3343c 1px 1px 10px;
-  }
-  
-  h1 {
+}
+h1{
+    
     color: beige;
-    font-size: 65px;
+    font-size:65px;
     font-family: "Playfair Display", serif;
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
-  }
-
-  #burger {
-    background-color: #ca1919;
-    display: block;
+}
+#burger {
+    background-color:#ca1919;
+    display:block;
     color: whitesmoke;
     text-align: center;
+    border-radius: 6px 6px 6px 6px;
     margin: auto;
     padding: 5px;
     width: 90vw;
     cursor: pointer;
-  }
-  
-  #burger:hover {
-    background-color: #c72b0f;
-  }
-  
-  menu {
-    color: #0b793994;
+}
+
+#burger:hover {
+    background-color: #c72b0f; 
+    border-radius: 6px 6px 6px 6px;
+}
+menu{
+    color:#0b793994 ;
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
     list-style-type: none;
-    width: 90vw;
-    margin: auto;
-    display: none;
-  }
-  
-  menu > ul {
-    list-style-type: none;
-  }
-  
-  menu > ul > li > a {
-    padding: 8px;
-    text-decoration: none;
-    background-color: #930f14;
-    text-align: center;
-    border-radius: 3px 3px 3px 3px;
-    color: #a58c78;
-    margin: auto;
+    width: 90ww;
+    margin:auto;
     display: block;
-  }
-  
-  menu > ul > li > a:hover {
-    background-color: #c72b0f;
-    color: #000;
+    
+}
+
+menu>ul {
+    list-style-type:none;
+   
+   
+}
+menu>ul>li>a {
+    /* display: none; */
+   padding: 8px;
+   text-decoration:none;
+   background-color: #930f14;
+   text-align:center;
+   border-radius:3px 3px 3px 3px ;
+   color: #a58c78;
+   margin: auto;
+   /* display: block; */
+}
+menu>ul>li>a:hover {
+  background-color: #c72b0f;
+  color: #000;
+  text-decoration:none ;
+  padding:7px;
+  width: 90vw;
+}
+ #iconnav{
+       
+       margin: 0px;   
+        width: 25px;
+        height:25px;
+      
+    }
+ a{
+    color: #b00f17;
     text-decoration: none;
-    padding: 7px;
-    width: 90vw;
-  }
-  main {
+ }
+ a:hover{
+    color:rgb(6, 106, 73);
+    text-decoration: none;
+ }
+main{
+ 
     background-color: #790b11;
     text-align: center;
-    border-radius: 7px 7px 7px 7px;
-    width: 90vw;
+    border-radius:7px 7px 7px 7px;
+    width: 90ww;
     padding: 7px;
     margin: auto;
-  }
-  
-  article > h2 {
-    color: #bb483b;
-    font-size: 45px;
+
+
+}
+  article>h2{
+    color:#bb483b;
+    font-size:45px;
     font-family: "Playfair Display", serif;
     font-optical-sizing: auto;
     padding-bottom: 19px;
+    font-style: normal
+
+  }
+  /* Estilizar todos os botões */
+button {
+  background-color: #b00f17; /* Cor de fundo */
+  color: #ffffff; /* Cor do texto */
+  padding: 10px 20px; /* Espaçamento interno */
+  border:block; /* Remover borda */
+  border-radius: 5px 5px 5px 5px; /* Arredondar cantos */
+  cursor: pointer; /* Mudar cursor para ponteiro */
+}
+
+/* Estilizar botão específico com ID */
+#botao-1 {
+  background-color: #b00f17; /* Cor de fundo vermelha */
+}
+
+#botao-2 {
+  background-color: #b00f17; /* Cor de fundo verde */
+}
+
+#botao-3 {
+  background-color: #0000ff; /* Cor de fundo azul */
+}
+
+/* Estilizar hover */
+button:hover {
+  background-color:#c72b0f; /* Cor de fundo ao passar o mouse */
+  color: #ffffff; /* Cor do texto ao passar o mouse */
+}
+
+/* Estilizar focus */
+button:focus {
+  box-shadow: 0 0 10px #333; /* Sombra ao clicar */
+}
+  .container {
+    display: flex;
+    /* Para espaçamento entre os itens */
+    align-items: center; /* Alinha os itens ao topo */
+    flex-wrap: wrap; /* Permite que os itens quebrem para a linha seguinte se necessário */
+}
+
+  .content img {
+    margin: 10px;
+    padding: 15px;
+    border-style: double;
+    border-color:#c72b0f;
+    border-radius: 10px 10px 10px 10px;
+    
+  }
+  
+  .content p {
+    margin: 10px;
+    color: #986b66;
+    font-size: 23px;
+    font-family:"Playfair Display", serif;
+    font-weight: 400;
     font-style: normal;
   }
   
+  .content h3 {
+    margin: 1px;
+    color:#bb483b;
+    font-size:45px;
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    padding-bottom: 19px;
+    font-style: normal
+
+  }
+
+ footer{
+    background-color:#a58c78;
+    height:30px;
+    color: beige;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+
+      }
+
+      /* media queries */
+ 
+@media screen and (min-width: 768px) and (max-width : 1024px) {
+
+    body{
+
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        background-image:linear-gradient(to bottom, #930f14 , #730);
+        background-repeat:no-repeat;
+        background-position: top;
+        background-attachment: scroll;
+    }
+    
+    header{
+        background-color:#930f14;
+        margin-top:17px;
+        border-radius: 6px 6px 5px 5px;
+        height:190px;
+        /* width:90px;
+        */
+    
+    }
+    header>h1{
+     text-align: center;
+        color: aliceblue;
+        padding: 6px;
+        text-shadow: #e3343c 1px 1px 10px;
+    }
+    h1{
+        
+        color: beige;
+        font-size:65px;
+        font-family: "Playfair Display", serif;
+        font-optical-sizing: auto;
+        font-weight: 600;
+        font-style: normal;
+    }
+#burger {
+    background-color:#ca1919;
+    display: block;
+    color: whitesmoke;
+    text-align: center;
+    margin: auto;
+    padding: 7px;
+    width: 90vw;
+    cursor: pointer;
+}
+
+#burger:hover {
+    background-color: #c72b0f; 
+}
+menu{
+    color:#0b793994 ;
+    text-align:center;
+    list-style-type: none;
+    width: 90ww
+    margin auto;
+
+    font-family: 'Courier New', Courier, monospace;
+   
+   
+}
+menu>ul {
+    list-style-type: none;
+}
+menu>ul>li>a {
+    /* display: none; */
+   padding: 8px;
+   text-decoration:none;
+   background-color: #930f14;
+   text-align: center;
+   border-radius:0px 0px 0px 0px ;
+   color: #a58c78;
+   margin: auto;
+   display: block;
+
+}
+
+menu>ul>li>a:hover {
+    background-color: #c72b0f;
+  color: #000;
+  text-decoration:none ;
+  padding:7px;
+  width: 90vw;
+}
+
+main{
+ 
+    background-color: #790b11;
+    text-align: center;
+    border-radius:7px 7px 7px 7px;
+    width: 90ww;
+    padding: 7px;
+    margin: auto;
+
+
+}
+  article>h2{
+    color:#bb483b;
+    font-size:45px;
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    padding-bottom: 19px;
+    font-style: normal
+
+  }
   .content {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content:center;
     align-items: center;
-  }
+}
   
   .content img {
     margin: 10px;
@@ -136,7 +333,7 @@
     width: 60%;
     color: #986b66;
     font-size: 23px;
-    font-family: "Playfair Display", serif;
+    font-family:"Playfair Display", serif;
     font-weight: 400;
     font-style: normal;
   }
@@ -144,168 +341,22 @@
   .content h3 {
     margin: 10px;
     width: 60%;
-    color: #bb483b;
-    font-size: 45px;
+    color:#bb483b;
+    font-size:45px;
     font-family: "Playfair Display", serif;
     font-optical-sizing: auto;
     padding-bottom: 19px;
-    font-style: normal;
+    font-style: normal
+
   }
 
-  footer {
-    background-color: #a58c78;
-    height: 30px;
+ footer{
+    background-color:#a58c78;
+    height:30px;
     color: beige;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
     font-style: normal;
-  }
-  /* Media Queries */
-  @media screen and (min-width: 768px) and (max-width : 1024px) {
 
- /* Global Styles */
-  
-  body {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    background-image: linear-gradient(to bottom, #930f14, #730);
-    background-repeat: no-repeat;
-    background-position: top;
-    background-attachment: scroll;
-  }
-  
-  /* Header Styles */
-  
-  header {
-    background-color: #930f14;
-    margin-top: 3px;
-    border-radius: 6px 6px 0px 0px;
-    height: 190px;
-    width: 90vw;
-    text-align: center;
-  }
-  
-  header > h1 {
-    text-align: center;
-    color: aliceblue;
-    padding: 3px;
-    text-shadow: #e3343c 1px 1px 10px;
-  }
-  
-  h1 {
-    color: beige;
-    font-size: 65px;
-    font-family: "Playfair Display", serif;
-    font-optical-sizing: auto;
-    font-weight: 600;
-    font-style: normal;
-  }
-  
-  /* Navigation Styles */
-
-#burger {
-    background-color: #ca1919;
-    display: block;
-    color: whitesmoke;
-    text-align: center;
-    margin: auto;
-    padding: 7px;
-    width: 90vw;
-    cursor: pointer;
-  }
-  
-  #burger:hover {
-    background-color: #c72b0f;
-  }
-  
-  menu {
-    color: #0b793994;
-    text-align: center;
-    list-style-type: none;
-    width: 90vw;
-    margin: auto;
-    font-family: 'Courier New', Courier, monospace;
-    display: block; /* Add this to make the menu visible by default */
-  }
-  
-  menu > ul {
-    list-style-type: none;
-  }
-  
-  menu > ul > li > a {
-    padding: 8px;
-    text-decoration: none;
-    background-color: #930f14;
-    text-align: center;
-    border-radius: 0px 0px 0px 0px;
-    color: #a58c78;
-    margin: auto;
-    display: block;
-  }
-  
-  menu > ul > li > a:hover {
-    background-color: #c72b0f;
-    color: #000;
-    text-decoration: none;
-    padding: 7px;
-    width: 90vw;
-  }
-  /* Main Content Styles */
-  
-  main {
-    background-color: #790b11;
-    text-align: center;
-    border-radius: 0px 0px 7px 7px;
-    width: 90vw;
-    padding: 7px;
-    margin: auto;
-  }
-  
-  article > h2 {
-    color: #bb483b;
-    font-size: 45px;
-    font-family: "Playfair Display", serif;
-    font-optical-sizing: auto;
-    padding-bottom: 19px;
-    font-style: normal;
-  }
-  
-  article > p {
-    color: #986b66;
-    font-size: 23px;
-    font-family: "Playfair Display", serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  /* Icon Styles */
-  
-  #iconnav {
-    width: 25px;
-    height: 25px;
-    align-items: center;
-  }
-  
-  /* Link Styles */
-  
-  a {
-    color: #b00f17;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    color: rgb(6, 106, 73);
-    text-decoration: none;
-  }
-  
-  /* Footer Styles */
-  
-  footer {
-    background-color: #a58c78;
-    height: 30px;
-    color: beige;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-
-  }
+      }
+    }
